added progress bar for skills, changed police for project description, added site icon, added second section( change colors)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="assets/portfolio.ico">
     <link rel="stylesheet" href="style.css">
     <title>My Portfolio</title>
 </head>
@@ -25,7 +26,8 @@
             <a href="projects.html">Projects</a>
         </nav>
     </header>
-    <section class="home">
+
+    <section class="full-page home">
         <div class="home-content">
             <h1>Hi, It's <span>Alexandre </span></h1>
             <h3 class="typing-text">I'm an engineering student </h3>
@@ -45,6 +47,16 @@
             <a href="assets/my_resume.pdf" download class="btn" target="_blank">Download Resume</a>
             <a href="#" class="btn" onclick="showContactForm()">Contact me</a>
 
+        </div>
+    </section>
+
+    <section class="full-page" id="section2">
+        <div class="home-content">
+            <h1>Welcome to My Portfolio</h1>
+            <p>This section contains more information about my projects and experiences.</p>
+            <p>Here, you'll find details about my skills, education, and various projects that I have worked on. I am
+                passionate about integrating technology with medicine to develop innovative solutions.</p>
+            <p>Feel free to explore further or get in touch!</p>
         </div>
     </section>
 
