--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - Alexandre Carminot</title>
+    <link rel="icon" type="image/x-icon" href="assets/portfolio.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -36,34 +37,34 @@
         <ul>
             <li onclick="openModal([''])">
                 <strong>AI Text Summarization Project 👁</strong> (Python)<br>
-                <em>Currently developing an AI system to summarize texts using advanced algorithms and classify thewm
-                    into different categories</em>
+                Currently developing an AI system to summarize texts using advanced algorithms and classify thewm
+                    into different categories
             </li>
             <li onclick="openModal([''])">
                 <strong>Neural Network Development 👁</strong> (Python)<br>
-                <em>Built and trained a neural network for image classification (EEG)</em>
+                Built and trained a neural network for image classification (EEG)
             </li>
             <li onclick="openModal(['assets/hand2.jpg','assets/hand3.png','assets/hand.jpg'])">
                 <strong>Hand Movement Recognition 👁</strong> (MATLAB)<br>
-                <em>Developed a system to recognize hand movements for gesture-based control with data from flexion
-                    sensors.</em>
+                Developed a system to recognize hand movements for gesture-based control with data from flexion
+                    sensors.
             </li>
             <li onclick="openModal(['assets/ort.png','assets/ort2.png','assets/ort3.png',])">
                 <strong>Knee Orthosis Development 👁</strong> (Python, MATLAB)<br>
-                <em>Created an intelligent orthosis to track knee flexion and classify the flexions in different
-                    categories</em>
+                Created an intelligent orthosis to track knee flexion and classify the flexions in different
+                    categories
             </li>
             <li>
-                <strong>My Portfolio</strong> (HTML)<br>
-                <em>A website dedicated to me, explaining who I am, what I do and for which purposes.</em>
+                <strong>My Portfolio</strong> (HTML, CSS & Js)<br>
+                A website dedicated to me, explaining who I am, what I do and for which purposes.
             </li>
             <li onclick="openModal(['assets/rbt1.png'])">
                 <strong>Robot Stress Test 👁</strong> (CATIA)<br>
-                <em>Conducted stress testing on robotic designs to evaluate performance under load.</em>
+                Conducted stress testing on robotic designs to evaluate performance under load.
             </li>
             <li onclick=" openModal(['assets/fdf.png','assets/fdf2.png'])">
                 <strong>Fire Propagation Simulation 👁</strong> (Java)<br>
-                <em>A simulation project demonstrating fire spread dynamics in a multiple virtual environment.</em>
+                A simulation project demonstrating fire spread dynamics in a multiple virtual environment.
             </li>
         </ul>
     </section>
