--- a/skills.html
+++ b/skills.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skills - Alexandre Carminot</title>
+    <link rel="icon" type="image/x-icon" href="assets/portfolio.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -35,24 +36,57 @@
         <br>
         <h2>Programming Languages</h2>
         <br>
-
-        <ul>
-            <li><strong>Python:</strong> Proficient in Python for AI, data analysis, and signal processing. <br>
+        <ul class="skills-list">
+            <li>
+                <div class="skill-header">
+                    <strong>Python</strong>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 90%;"></div>
+                    </div>
+                </div>
+                Proficient in Python for AI, data analysis, and signal processing.<br>
                 <em>Application:</em> Developed an intelligent orthosis using Python for knee flexion tracking and
                 movement classification.
             </li>
-            <li><strong>MATLAB:</strong> Expertise in MATLAB for modeling, data analysis, and signal processing. <br>
+            <li>
+                <div class="skill-header">
+                    <strong>MATLAB</strong>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 75%;"></div>
+                    </div>
+                </div>
+                Expertise in MATLAB for modeling, data analysis, and signal processing.<br>
                 <em>Application:</em> Classified finger movements using MATLAB in medical engineering projects.
+            <li>
+                <div class="skill-header">
+                    <strong>Java</strong>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 70%;"></div>
+                    </div>
+                </div>
+                Knowledgeable in Java for software development tasks.<br>
+                <em>Application:</em> Used Java for academic software projects and simulations.
             </li>
-            <li><strong>Java:</strong> Knowledgeable in Java for software development tasks. <br> <em>Application:</em>
-                Used Java for academic software projects and simulations.</li>
-            <li><strong>HTML & CSS:</strong> Acquainted with HTML and CSS for structuring web content. <br>
-                <em>Application:</em> This portfolio is written from scratch using HTML with a bit of CSS.
+            <li>
+                <div class="skill-header">
+                    <strong>HTML, CSS & Js</strong>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 60%;"></div>
+                    </div>
+                </div>
+                Acquainted with HTML, CSS & Js for structuring web content.<br>
+                <em>Application:</em> This portfolio is written from scratch using HTML, CSS & Js.
             </li>
-            <li><strong>C++:</strong> Familiar with C++ for performance-critical applications. <br>
+            <li>
+                <div class="skill-header">
+                    <strong>C++</strong>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 60%;"></div>
+                    </div>
+                </div>
+                Familiar with C++ for performance-critical applications.<br>
                 <em>Application:</em> Applied C++ in neural network modeling and engineering tasks.
             </li>
-
         </ul>
         <br>
 
