add arrows to scroll down

--- a/index.html
+++ b/index.html
@@ -46,13 +46,15 @@
             </div>
             <a href="assets/my_resume.pdf" download class="btn" target="_blank">Download Resume</a>
             <a href="#" class="btn" onclick="showContactForm()">Contact me</a>
-
+        </div>
+        <div class="scroll-down-arrow">
+            <i class="fas fa-chevron-down"></i>
         </div>
     </section>
 
     <section class="full-page" id="section2">
         <div class="home-content">
-            <h1>Welcome to My Portfolio</h1>
+            <h1>About me</h1>
             <p>This section contains more information about my projects and experiences.</p>
             <p>Here, you'll find details about my skills, education, and various projects that I have worked on. I am
                 passionate about integrating technology with medicine to develop innovative solutions.</p>
