color fixes, added arrows

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                 passionate about integrating technology with medicine to develop innovative solutions.</p>
             <p>Feel free to explore further or get in touch!</p>
         </div>
+        <div class="scroll-up-arrow">
+            <i class="fas fa-chevron-up"></i>
+        </div>
     </section>
 
     <div id="weChatPopup" class="popup" onclick="closeWeChatPopup(event)">
