add sections about me and arrow functionnalities for it, fixed js with arrow code

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
 
-    <section class="full-page home">
+    <section class="full-page home" id="section0">
         <div class="home-content">
             <h1>Hi, It's <span>Alexandre </span></h1>
             <h3 class="typing-text">I'm an engineering student </h3>
@@ -52,7 +52,10 @@
         </div>
     </section>
 
-    <section class="full-page" id="section2">
+    <section class="full-page" id="section1">
+        <div class="scroll-up-arrow">
+            <i class="fas fa-chevron-up"></i>
+        </div>
         <div class="home-content">
             <h1>About me</h1>
             <p>This section contains more information about my projects and experiences.</p>
@@ -60,9 +63,55 @@
                 passionate about integrating technology with medicine to develop innovative solutions.</p>
             <p>Feel free to explore further or get in touch!</p>
         </div>
+        <div class="scroll-down-arrow">
+            <i class="fas fa-chevron-down"></i>
+        </div>
+    </section>
+
+    <section class="full-page" id="section2">
         <div class="scroll-up-arrow">
             <i class="fas fa-chevron-up"></i>
         </div>
+        <div class="home-content">
+            <h1>About me</h1>
+            <p>Sports</p>
+            <p>Here, you'll find details about my skills, education, and various projects that I have worked on. I am
+                passionate about integrating technology with medicine to develop innovative solutions.</p>
+            <p>Feel free to explore further or get in touch!</p>
+        </div>
+        <div class="scroll-down-arrow">
+            <i class="fas fa-chevron-down"></i>
+        </div>
+    </section>
+
+    <section class="full-page" id="section3">
+        <div class="scroll-up-arrow">
+            <i class="fas fa-chevron-up"></i>
+        </div>
+        <div class="home-content">
+            <h1>About me</h1>
+            <p>Music and cooking</p>
+            <p>Here, you'll find details about my skills, education, and various projects that I have worked on. I am
+                passionate about integrating technology with medicine to develop innovative solutions.</p>
+            <p>Feel free to explore further or get in touch!</p>
+        </div>
+        <div class="scroll-down-arrow">
+            <i class="fas fa-chevron-down"></i>
+        </div>
+    </section>
+
+    <section class="full-page" id="section4">
+        <div class="scroll-up-arrow">
+            <i class="fas fa-chevron-up"></i>
+        </div>
+        <div class="home-content">
+            <h1>About me</h1>
+            <p>Science</p>
+            <p>Here, you'll find details about my skills, education, and various projects that I have worked on. I am
+                passionate about integrating technology with medicine to develop innovative solutions.</p>
+            <p>Feel free to explore further or get in touch!</p>
+        </div>
+
     </section>
 
     <div id="weChatPopup" class="popup" onclick="closeWeChatPopup(event)">
