--- a/skills.html
+++ b/skills.html
@@ -57,25 +57,26 @@
                 </div>
                 Expertise in MATLAB for modeling, data analysis, and signal processing.<br>
                 <em>Application:</em> Classified finger movements using MATLAB in medical engineering projects.
-            <li>
-                <div class="skill-header">
-                    <strong>Java</strong>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 70%;"></div>
-                    </div>
-                </div>
-                Knowledgeable in Java for software development tasks.<br>
-                <em>Application:</em> Used Java for academic software projects and simulations.
             </li>
             <li>
                 <div class="skill-header">
                     <strong>HTML, CSS & Js</strong>
                     <div class="progress-bar">
+                        <div class="progress" style="width: 70%;"></div>
+                    </div>
+                </div>
+                Knowledgeable in HTML, CSS & Js for structuring web content.<br>
+                <em>Application:</em> This portfolio is written from scratch using HTML, CSS & Js.
+            </li>
+            <li>
+                <div class="skill-header">
+                    <strong>Java</strong>
+                    <div class="progress-bar">
                         <div class="progress" style="width: 60%;"></div>
                     </div>
                 </div>
-                Acquainted with HTML, CSS & Js for structuring web content.<br>
-                <em>Application:</em> This portfolio is written from scratch using HTML, CSS & Js.
+                Acquainted with Java for software development tasks.<br>
+                <em>Application:</em> Used Java for academic software projects and simulations.
             </li>
             <li>
                 <div class="skill-header">
