change dpicttures for projects

--- a/index.html
+++ b/index.html
@@ -29,13 +29,18 @@
 
     <section class="full-page home" id="section0">
         <div class="home-content">
-            <h1>Hi, It's <span>Alexandre </span></h1>
+            <h1>Hi, It's <span>Alexandre CARMINOT</span></h1>
             <h3 class="typing-text">I'm an engineering student </h3>
-            <p>Focusing on medical engineering, particularly in neuroscience, and a strong aptitude for software
-                development and artificial intelligence. My experience spans projects related to brain-computer
-                interfaces (BCI), machine learning, and neuroengineering. I have developed applications that leverage
-                Python, MATLAB, and C++ for data analysis, signal processing, and AI-driven models. I aim
-                to integrate technology and medicine to advance neuroengineering solutions.</p>
+            <p>As a student of engineering and medicine, my journey is deeply rooted in the intersection of neuroscience
+                and technology. With a focus on medical engineering, I am driven by a passion for software development
+                and artificial intelligence, particularly in the realms of brain-computer interfaces, machine learning,
+                and neuroengineering. My work has spanned projects using Python, MATLAB, and C++ to explore data
+                analysis, signal processing, and AI-driven solutions. Currently studying at Tianjin University, I find
+                inspiration in collaborative environments that nurture creativity and challenge my problem-solving
+                abilities. Beyond academics, my love for sports, science, music, and cooking shapes a balanced approach
+                to life. Curiosity fuels my ambitions, as I continuously seek new challenges to deepen my understanding
+                and contribute to the fusion of technology and medicine in advancing neuroengineering innovations.
+            </p>
             <div class="social-icons">
                 <a href="mailto:alexandre.carminot@outlook.com"><i class="fa-brands fa-at"></i></a>
                 <a href="https://www.linkedin.com/in/alexandre-carminot-0083572b1/" target="_blank"><i
@@ -44,7 +49,7 @@
                 <a href="https://github.com/Alex-Irae" target="_blank"><i class="fa-brands fa-github"></i></a>
 
             </div>
-            <a href="assets/my_resume.pdf" download class="btn" target="_blank">Download Resume</a>
+            <a href="assets/my_resume.pdf" download class="btn" target="_blank">Download my Resume</a>
             <a href="#" class="btn" onclick="showContactForm()">Contact me</a>
         </div>
         <div class="scroll-down-arrow">
@@ -57,11 +62,13 @@
             <i class="fas fa-chevron-up"></i>
         </div>
         <div class="home-content">
-            <h1>About me</h1>
-            <p>This section contains more information about my projects and experiences.</p>
-            <p>Here, you'll find details about my skills, education, and various projects that I have worked on. I am
-                passionate about integrating technology with medicine to develop innovative solutions.</p>
-            <p>Feel free to explore further or get in touch!</p>
+            <h1>Sports 🥋</h1>
+            <p>
+                I enjoy team sports like football and rugby, drawn to the dynamic and competitive nature of the games.
+                Martial arts also play a significant role in my life, where I hold a red belt in Taekwondo and a brown
+                belt in Judo. These practices keep me physically active while fostering discipline, respect, and
+                perseverance, offering both personal growth and fulfillment.
+            </p>
         </div>
         <div class="scroll-down-arrow">
             <i class="fas fa-chevron-down"></i>
@@ -73,11 +80,11 @@
             <i class="fas fa-chevron-up"></i>
         </div>
         <div class="home-content">
-            <h1>About me</h1>
-            <p>Sports</p>
-            <p>Here, you'll find details about my skills, education, and various projects that I have worked on. I am
-                passionate about integrating technology with medicine to develop innovative solutions.</p>
-            <p>Feel free to explore further or get in touch!</p>
+            <h1>🔭 Sciences 𓂀</h1>
+            <p>Science, in all its vastness, captures my curiosity, particularly the realms of astronomy, cosmology, and
+                archaeology. These fields invite me to ponder the mysteries of the universe and the stories etched into
+                the fabric of human history. I'm drawn to questions that challenge our understanding of existence,
+                stirring a sense of wonder about our place in the cosmos.</p>
         </div>
         <div class="scroll-down-arrow">
             <i class="fas fa-chevron-down"></i>
@@ -89,27 +96,12 @@
             <i class="fas fa-chevron-up"></i>
         </div>
         <div class="home-content">
-            <h1>About me</h1>
-            <p>Music and cooking</p>
-            <p>Here, you'll find details about my skills, education, and various projects that I have worked on. I am
-                passionate about integrating technology with medicine to develop innovative solutions.</p>
-            <p>Feel free to explore further or get in touch!</p>
-        </div>
-        <div class="scroll-down-arrow">
-            <i class="fas fa-chevron-down"></i>
-        </div>
-    </section>
-
-    <section class="full-page" id="section4">
-        <div class="scroll-up-arrow">
-            <i class="fas fa-chevron-up"></i>
-        </div>
-        <div class="home-content">
-            <h1>About me</h1>
-            <p>Science</p>
-            <p>Here, you'll find details about my skills, education, and various projects that I have worked on. I am
-                passionate about integrating technology with medicine to develop innovative solutions.</p>
-            <p>Feel free to explore further or get in touch!</p>
+            <h1>🎵 Music and Cooking</h1>
+            <p>My musical tastes are a blend of contrasts, from the elegance of classical compositions to the raw energy
+                of schizophrenic rock. Music weaves itself into my life, sparking creativity and offering moments of
+                reflection. In the kitchen, I find solace in cooking for myself, experimenting with flavors and recipes.
+                It's a personal ritual, where the process is as rewarding as the meal itself, providing both relaxation
+                and creative expression.</p>
         </div>
 
     </section>
