--- a/projects.html
+++ b/projects.html
@@ -37,13 +37,19 @@
         <ul>
             <li>
                 <strong
-                    onclick="openModal(['assets/dispred (2).png','assets/dispred (3).png','assets/dispred (4).png','assets/dispred (1).png'])">
+                    onclick="openModal(['assets/dispred (2).png','assets/dispred (3).png','assets/dispred (4).png','assets/dispred (5).png','assets/dispred (1).png'])">
                     Disease prediction algorithm 👁</strong> (Python)
-                <a href="https://github.com/Alex-Irae/DiseasePrediction" target="_blank">🔗</a><br>
-                Built and trained a AI model to classify diseases based on symptoms inputs.
-                Using a combnination of XGBoost and Random Forest algorithms with a DNN to further enhance data
-                prediction.
-                Processing methods to clean and preprocess data, then train the model to predict the disease.
+                <a href="https://github.com/Alex-Irae/DiseasePrediction" target="_blank">🔗 GitHub Link 🔗</a><br>
+                Built and trained an app powered by several machine learning models and a neural network to preditc a
+                disease based on symptoms inputs.
+                Using a combnination of XGBoost, SVM, Logistic regression and Random Forest algorithms to enhance data
+                prediction on a side.
+                Using a 5 layers neural network (relu, swish,relu,swish,softmax) to predict the disease on the other
+                side (same goal, different means).
+                Accuracy of 94.7% for the nneural network and 100% for the ensemble model(on test data).
+                The neural network performs ebtter overall on user input thanks to its efficient generalisation
+                Processing methods to clean and preprocess data, then train the model to predict the disease before
+                prompting the user to enter his symptoms.
             </li>
             <li>
                 <strong onclick="openModal([''])">
