dont show modal when no pictures

--- a/projects.html
+++ b/projects.html
@@ -52,9 +52,9 @@
                 prompting the user to enter his symptoms.
             </li>
             <li>
-                <strong onclick="openModal([''])">
-                    AI Text Summarization Project 👁</strong> (Python)<br>
-                Currently developing an AI system to summarize texts using PyTorch and Tensorflow and classify them
+                <strong>
+                    AI Text Summarization Project </strong> (Python)<br>
+                Currently developing an AI system to summarize texts using PyTorch and Tensorflow to classify them
                 into different categories, based on FengShenBang LLm.
             </li>
             <li>
