--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                 and technology. With a focus on medical engineering, I am driven by a passion for software development
                 and artificial intelligence, particularly in the realms of brain-computer interfaces, machine learning,
                 and neuroengineering. My work has spanned projects using Python, MATLAB, and C++ to explore data
-                analysis, signal processing, and AI-driven solutions. Currently studying at Tianjin University, I find
+                analysis, signal processing, and AI-driven solutions. Currently studying at Tianjin University in
+                computer science and machine learning, I find
                 inspiration in collaborative environments that nurture creativity and challenge my problem-solving
                 abilities. Beyond academics, my love for sports, science, music, and cooking shapes a balanced approach
                 to life. Curiosity fuels my ambitions, as I continuously seek new challenges to deepen my understanding
