--- a/projects.html
+++ b/projects.html
@@ -58,6 +58,12 @@
                 into different categories, based on FengShenBang LLm.
             </li>
             <li>
+                <strong>
+                    EEG classification project</strong> (C++)<br>
+                Developed a system to classify EEG signals into different categories using a convolutional neural network.
+                I used libraries like tensorflow to build the neural network 
+            </li>
+            <li>
                 <strong onclick="openModal(['assets/hand2.jpg','assets/hand3.png','assets/hand.jpg'])">
                     Hand Movement Recognition 👁</strong> (MATLAB)<br>
                 Developed a system to recognize hand movements for gesture-based control with data from flexion sensors.
