--- a/projects.html
+++ b/projects.html
@@ -60,13 +60,15 @@
             <li>
                 <strong>
                     Brain-Computer Interface Simulator</strong> (C++)
-                    <a href="https://github.com/Alex-Irae/DiseasePrediction" target="_blank">🔗 GitHub Link 🔗</a><br>
-                    Software-based BCI simulator that mimics the processing of EEG signals and allows users to control virtual applications.
+                <a href="https://github.com/Alex-Irae/BCI_SIM" target="_blank">🔗 GitHub Link 🔗</a><br>
+                Software-based BCI simulator that mimics the processing of EEG signals and allows users to control
+                virtual applications.
 
-                    Signal Simulation: Generate synthetic EEG signals based on predefined patterns.
-                    Signal Processing: Implement algorithms for filtering and feature extraction in C++.
-                    User Interaction: Allow users to control actions (like moving a cursor) based on simulated brain activity.
-                    Visualization: Provide real-time visual feedback of simulated brain signals and user actions.
+                Signal Simulation: Generate synthetic EEG signals based on predefined patterns.
+                Signal Processing: Implement algorithms for filtering and feature extraction in C++.
+                User Interaction: Allow users to control actions (like moving a cursor) based on simulated brain
+                activity.
+                Visualization: Provide real-time visual feedback of simulated brain signals and user actions.
             </li>
             <li>
                 <strong onclick="openModal(['assets/hand2.jpg','assets/hand3.png','assets/hand.jpg'])">
