--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@
             </li>
             <li>
                 <strong>My Portfolio</strong> (HTML, CSS & Js)
-                <a href="https://github.com/Alex-Irae/Portfolio" target="_blank">🔗</a><br>
+                <a href="https://github.com/Alex-Irae/Portfolio" target="_blank">🔗 GitHub Link 🔗</a><br>
                 The website you are currently visiting, exposing who I am, and what I do.
             </li>
             <li>
