--- a/skills.html
+++ b/skills.html
@@ -45,8 +45,8 @@
                     </div>
                 </div>
                 Proficient in Python for AI, data analysis, and signal processing.<br>
-                <em>Application:</em> Developed an intelligent orthosis using Python for knee flexion tracking and
-                movement classification.
+                <em>Application:</em> Developped an app to predict disease given a list of symptom using Deep Neural
+                Network and Machin learning models.
             </li>
             <li>
                 <div class="skill-header">
@@ -87,6 +87,7 @@
                 </div>
                 Familiar with C++ for performance-critical applications.<br>
                 <em>Application:</em> Applied C++ in neural network modeling and engineering tasks.
+                Cuurently creating a BCI simulator to control apps with brain signals.
             </li>
         </ul>
         <br>
@@ -107,7 +108,21 @@
         </ul>
 
         <br>
+        <h2>Hard Skills</h2>
+        <br>
 
+        <ul>
+            <li><strong>Data Analysis and Interpretation:</strong> Ability to process and analyze complex datasets to
+                draw meaningful conclusions.
+            </li>
+            <li><strong>Problem-Solving and Critical Thinking:</strong> Skilled in identifying issues and generating
+                solutions efficiently.
+            </li>
+            <li><strong>Research and Information Gathering:</strong> Able to quickly adapt to new challenges and
+                environments.
+            </li>
+        </ul>
+        <br>
         <h2>Soft Skills</h2>
         <br>
 
