if mobile overmiddle

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
 
-    <section class="full-page home" id="section0">
+    <section class="full-page" id="section0">
         <div class="home-content">
             <h1>Hi, It's <span>Alexandre CARMINOT</span></h1>
             <h3 class="typing-text">I'm an engineering student </h3>
