updated skill sectipon

--- a/skills.html
+++ b/skills.html
@@ -44,9 +44,20 @@
                         <div class="progress" style="width: 90%;"></div>
                     </div>
                 </div>
-                Proficient in Python for AI, data analysis, and signal processing.<br>
+                Proficient in Python for AI, data analysis, and signal processing - TensorFlow, Pytorch, scikit-learn,
+                pandas, MNE - <br>
                 <em>Application:</em> Developped an app to predict disease given a list of symptom using Deep Neural
                 Network and Machin learning models.
+            </li>
+            <li>
+                <div class="skill-header">
+                    <strong>Java</strong>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 75%;"></div>
+                    </div>
+                </div>
+                Acquainted with Java for software development tasks.<br>
+                <em>Application:</em> Used Java for academic software projects and simulations.
             </li>
             <li>
                 <div class="skill-header">
@@ -70,16 +81,6 @@
             </li>
             <li>
                 <div class="skill-header">
-                    <strong>Java</strong>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 60%;"></div>
-                    </div>
-                </div>
-                Acquainted with Java for software development tasks.<br>
-                <em>Application:</em> Used Java for academic software projects and simulations.
-            </li>
-            <li>
-                <div class="skill-header">
                     <strong>C++</strong>
                     <div class="progress-bar">
                         <div class="progress" style="width: 60%;"></div>
@@ -87,7 +88,7 @@
                 </div>
                 Familiar with C++ for performance-critical applications.<br>
                 <em>Application:</em> Applied C++ in neural network modeling and engineering tasks.
-                Cuurently creating a BCI simulator to control apps with brain signals.
+                Currently creating a BCI simulator to control various apps with brain signals.
             </li>
         </ul>
         <br>
