mistae in project,educ date modif

--- a/projects.html
+++ b/projects.html
@@ -41,13 +41,13 @@
                     Disease prediction algorithm 👁</strong> (Python)
                 <a href="https://github.com/Alex-Irae/DiseasePrediction" target="_blank">🔗 GitHub Link 🔗</a><br>
                 Built and trained an app powered by several machine learning models and a neural network to preditc a
-                disease based on symptoms inputs.
+                disease based on symptoms inputs.<br>
                 Using a combnination of XGBoost, SVM, Logistic regression and Random Forest algorithms to enhance data
-                prediction on a side.
-                Using a 5 layers neural network (relu, swish,relu,swish,softmax) to predict the disease on the other
-                side (same goal, different means).
+                prediction on a side.<br>
+                Using a 4 layers neural network (Sigmoid,ReLu,Swish,softmax) to predict the disease on the other
+                side (same goal, different means).<br>
                 Accuracy of 94.7% for the nneural network and 100% for the ensemble model(on test data).
-                The neural network performs ebtter overall on user input thanks to its efficient generalisation
+                The neural network performs better overall on user input thanks to its efficient generalisation.<br>
                 Processing methods to clean and preprocess data, then train the model to predict the disease before
                 prompting the user to enter his symptoms.
             </li>
