workshop and orthe descr,

--- a/skills.html
+++ b/skills.html
@@ -44,8 +44,7 @@
                         <div class="progress" style="width: 90%;"></div>
                     </div>
                 </div>
-                Proficient in Python for AI, data analysis, and signal processing - TensorFlow, Pytorch, scikit-learn,
-                pandas, MNE - <br>
+                Proficient in Python for AI, data analysis, and signal processing <br>
                 <em>Application:</em> Developped an app to predict disease given a list of symptom using Deep Neural
                 Network and Machin learning models.
             </li>
@@ -92,6 +91,24 @@
             </li>
         </ul>
         <br>
+        <h2>Hard Skills</h2>
+        <br>
+        <ul>
+            <li><strong>Data Analysis and Interpretation:</strong> Ability to process and analyze complex datasets to
+                draw meaningful conclusions.
+            </li>
+            <li><strong>AI and Machine Learning:</strong> Skilled with multiple programming libraries - TensorFlow,
+                Pytorch, scikit-learn,
+                pandas, MNE - and different ML models Deep Neural Networks,XGBoost, SVN and Random Forest.
+            </li>
+            <li><strong>Problem-Solving and Critical Thinking:</strong> Skilled in identifying issues and generating
+                solutions efficiently.
+            </li>
+            <li><strong>Research and Information Gathering:</strong> Able to quickly adapt to new challenges and
+                environments.
+            </li>
+        </ul>
+        <br>
 
         <h2>Modeling Software</h2>
         <br>
@@ -108,20 +125,7 @@
             </li>
         </ul>
 
-        <br>
-        <h2>Hard Skills</h2>
-        <br>
-        <ul>
-            <li><strong>Data Analysis and Interpretation:</strong> Ability to process and analyze complex datasets to
-                draw meaningful conclusions.
-            </li>
-            <li><strong>Problem-Solving and Critical Thinking:</strong> Skilled in identifying issues and generating
-                solutions efficiently.
-            </li>
-            <li><strong>Research and Information Gathering:</strong> Able to quickly adapt to new challenges and
-                environments.
-            </li>
-        </ul>
+
         <br>
         <h2>Soft Skills</h2>
         <br>
