--- a/projects.html
+++ b/projects.html
@@ -40,16 +40,48 @@
                     onclick="openModal(['assets/dispred (2).png','assets/dispred (3).png','assets/dispred (4).png','assets/dispred (5).png','assets/dispred (1).png'])">
                     Disease prediction algorithm 👁</strong> (Python)
                 <a href="https://github.com/Alex-Irae/DiseasePrediction" target="_blank">🔗 GitHub Link 🔗</a><br>
-                Built and trained an app powered by several machine learning models and a neural network to preditc a
-                disease based on symptoms inputs.<br>
-                Using a combnination of XGBoost, SVM, Logistic regression and Random Forest algorithms to enhance data
-                prediction on a side.<br>
-                Using a 4 layers neural network (Sigmoid,ReLu,Swish,softmax) to predict the disease on the other
-                side (same goal, different means).<br>
-                Accuracy of 94.7% for the nneural network and 100% for the ensemble model(on test data).
-                The neural network performs better overall on user input thanks to its efficient generalisation.<br>
-                Processing methods to clean and preprocess data, then train the model to predict the disease before
-                prompting the user to enter his symptoms.
+                Disease Prediction - Advanced Diagnostic Tool<br>&nbsp&nbsp&nbsp&nbsp <br>
+                Developed an AI-driven disease prediction system utilizing advanced machine learning algorithms to
+                accurately diagnose various diseases based on user-reported symptoms. This project aims to enhance
+                diagnostic accuracy and accessibility for patients outside traditional clinical environments.<br>
+                &nbsp&nbsp&nbsp&nbsp<br>
+                Technical Implementation:<br>
+
+                &nbsp&nbsp&nbsp&nbsp -Implemented a neural network architecture featuring a combination of Sigmoid,
+                ReLU, Swish, and Softmax
+                activation functions for optimal prediction accuracy.<br>
+                &nbsp&nbsp&nbsp&nbsp -Employed data augmentation techniques like SMOTE to handle class imbalance in the
+                dataset.<br>
+                &nbsp&nbsp&nbsp&nbsp -Utilized Optuna for hyperparameter optimization, enhancing model
+                performance.<br>&nbsp&nbsp&nbsp&nbsp<br>
+                Research & Development:<br>
+
+                &nbsp&nbsp&nbsp&nbsp -Conducted extensive data preprocessing and feature engineering to enhance model
+                training.<br>
+                &nbsp&nbsp&nbsp&nbsp -Analyzed model performance across various algorithms, including XGBoost, SVM, and
+                Logistic Regression.<br>
+                &nbsp&nbsp&nbsp&nbsp -Validated model predictions on unseen data to ensure robustness and
+                reliability.<br>&nbsp&nbsp&nbsp&nbsp<br>
+                Key Features:<br>
+
+                &nbsp&nbsp&nbsp&nbsp - Achieved around 96% accuracy in predicting diseases based on symptoms, with a
+                robust response to noise
+                in input data.<br>
+                &nbsp&nbsp&nbsp&nbsp - User-friendly interface for symptom input and disease prediction results.<br>
+                &nbsp&nbsp&nbsp&nbsp - Continuous model improvement through ongoing training with new data.<br>
+                &nbsp&nbsp&nbsp&nbsp - Documentation and guidelines for users to refine the model and provide
+                feedback.<br>&nbsp&nbsp&nbsp&nbsp<br>
+                Results:
+                <br>
+                &nbsp&nbsp&nbsp&nbsp - Achieved exceptional model performance with high accuracy and reliability without
+                overfitting.<br>
+                &nbsp&nbsp&nbsp&nbsp -Developed a framework for real-time disease prediction and monitoring.<br>
+                &nbsp&nbsp&nbsp&nbsp -Established a foundation for future enhancements, including a recommendation
+                system for personalized
+                healthcare.<br>
+                Impact: The system empowers users to receive timely health assessments and potential diagnoses,
+                facilitating proactive healthcare management and improving access to medical guidance outside of
+                clinical settings.
             </li>
             <li>
                 <strong>
@@ -59,7 +91,7 @@
             </li>
             <li>
                 <strong>
-                    Brain-Computer Interface Simulator</strong> (C++)
+                    Brain-Computer Interface Simulator</strong> (C++) - In Progress - 
                 <a href="https://github.com/Alex-Irae/BCI_SIM" target="_blank">🔗 GitHub Link 🔗</a><br>
                 Software-based BCI simulator that mimics the processing of EEG signals and allows users to control
                 virtual applications.
@@ -72,16 +104,79 @@
             </li>
             <li>
                 <strong onclick="openModal(['assets/hand2.jpg','assets/hand3.png','assets/hand.jpg'])">
-                    Hand Movement Recognition 👁</strong> (MATLAB)<br>
-                Developed a system to recognize hand movements for gesture-based control with data from flexion sensors.
-                Used Matlab to train a DNN to recognize fexion pattern in the finger associated with a movement.
+                    BCI WorkShop - Tianjin University - Hand Movement Recognition 👁</strong> (MATLAB)<br>
+                Built a complete hand movement recognition system during an advanced HCI workshop at Tianjin University,
+                led by Dr. Uriel and Dr. Tareq. The project combined hardware and software components:<br>
+
+                <br>
+                Hardware Implementation:<br>
+                &nbsp&nbsp&nbsp&nbsp- Designed data collection system using Arduino Mega 2560, extension gauges, and
+                accelerometers<br>
+                &nbsp&nbsp &nbsp&nbsp- Created a sensor-equipped glove to capture precise finger movements and
+                orientations<br>
+                &nbsp&nbsp&nbsp&nbsp- Integrated servo motors for movement reproduction<br>&nbsp&nbsp&nbsp&nbsp <br>
+
+                Software Development:<br>
+                &nbsp&nbsp&nbsp&nbsp- Developed AI model to recognize 6 distinct movement patterns:<br>
+                &nbsp&nbsp&nbsp&nbsp• 2 Static patterns (open/closed positions)<br>
+                &nbsp&nbsp&nbsp&nbsp• 4 Dynamic patterns (opening/closing, lateral movement, arm rotation, hand
+                closure)<br>
+                &nbsp&nbsp&nbsp&nbsp&nbsp- Trained the model using 70/30 split methodology with 5000+ iterations<br>
+                &nbsp&nbsp&nbsp&nbsp- Implemented real-time pattern recognition for immediate movement
+                classification<br>
+                &nbsp&nbsp&nbsp&nbsp- Created complete information processing chain: sensor input → pattern recognition
+                → motor
+                control<br>
+                &nbsp&nbsp&nbsp&nbsp <br>
+                Results:<br>
+                Successfully developed a system capable of recognizing and reproducing complex hand movements in
+                real-time, demonstrating practical applications in human-computer interaction and gesture control
+                systems.
             </li>
             <li>
                 <strong onclick="openModal(['assets/ort.png','assets/ort2.png','assets/ort3.png',])">
                     Knee Orthosis Development 👁</strong> (Python, MATLAB)<br>
-                Created an intelligent orthosis to track knee flexion and classify the flexions into different
-                categories, allowing for personalized rehabilitation programs and real-time feedback for healthcare
-                professionals
+                Knee Orthosis Development - Motion Analysis & Rehabilitation<br>
+                Developed an intelligent knee orthosis system for precise rehabilitation monitoring and analysis. This
+                project addressed the critical need for quantitative tracking of knee rehabilitation progress outside
+                clinical settings.<br>
+                &nbsp&nbsp&nbsp&nbsp <br>
+                Technical Implementation:<br>
+                &nbsp&nbsp&nbsp&nbsp- Integrated Inertial Measurement Units (IMUs) into a knee orthosis for real-time
+                motion tracking<br>
+                &nbsp&nbsp&nbsp&nbsp- Developed algorithms to accurately measure knee flexion angles and movement
+                patterns<br>
+                &nbsp&nbsp&nbsp&nbsp- Created data transformation pipeline to convert raw sensor data into clinically
+                relevant metrics<br>
+                &nbsp&nbsp&nbsp&nbsp- Validated system accuracy through Motion Lab testing using Vicon motion capture
+                system<br>
+                &nbsp&nbsp&nbsp&nbsp <br>
+                Research & Development:<br>
+                &nbsp&nbsp&nbsp&nbsp- Conducted comprehensive motion analysis in MotionLab environment<br>
+                &nbsp&nbsp&nbsp&nbsp- Performed comparative analysis between IMU data and Vicon reference system<br>
+                &nbsp&nbsp&nbsp&nbsp- Processed and analyzed motion data using MATLAB for precise movement
+                classification<br>
+                &nbsp&nbsp&nbsp&nbsp- Created user feedback protocols for real-time movement correction<br>
+                &nbsp&nbsp&nbsp&nbsp <br>
+                Key Features:<br>
+                &nbsp&nbsp&nbsp&nbsp- Real-time knee angle measurement and movement pattern recognition<br>
+                &nbsp&nbsp&nbsp&nbsp- Continuous monitoring capability for home rehabilitation<br>
+                &nbsp&nbsp&nbsp&nbsp- Integration with existing orthosis designs for minimal patient disruption<br>
+                &nbsp&nbsp&nbsp&nbsp- Data processing algorithms for movement quality assessment<br>
+                &nbsp&nbsp&nbsp&nbsp- User feedback system for immediate movement correction<br>
+                &nbsp&nbsp&nbsp&nbsp <br>
+                Results:<br>
+                &nbsp&nbsp&nbsp&nbsp- Successfully developed a system capable of accurate knee movement tracking<br>
+                &nbsp&nbsp&nbsp&nbsp- Validated system performance through Motion Lab testing<br>
+                &nbsp&nbsp&nbsp&nbsp- Created a practical solution for remote rehabilitation monitoring<br>
+                &nbsp&nbsp&nbsp&nbsp- Established framework for personalized rehabilitation protocols based on
+                quantitative data<br>
+                &nbsp&nbsp&nbsp&nbsp <br>
+                Impact:<br>
+                The system enables healthcare professionals to remotely monitor patient progress, adjust
+                rehabilitation<br>
+                protocols in real-time, and provide data-driven care decisions, significantly improving the<br>
+                rehabilitation process efficiency and effectiveness.<br>
             </li>
             <li>
                 <strong>My Portfolio</strong> (HTML, CSS & Js)
@@ -89,18 +184,36 @@
                 The website you are currently visiting, exposing who I am, and what I do.
             </li>
             <li>
+                <strong onclick=" openModal(['assets/fdf.png','assets/fdf2.png'])">
+                    Fire Propagation Simulation 👁</strong> (Java)<br>
+                Developed an interactive environmental simulation system to model fire spread dynamics across various
+                terrain types with real-time adjustable parameters.<br>
+                &nbsp&nbsp&nbsp&nbsp <br>
+                Technical Implementation:<br>
+                &nbsp&nbsp&nbsp&nbsp- Created a multi-frame Java application using Swing/AWT for the user interface<br>
+                &nbsp&nbsp&nbsp&nbsp- Implemented a dynamic grid-based simulation system using JButtons for terrain
+                visualization<br>
+                &nbsp&nbsp&nbsp&nbsp- Developed terrain generation algorithms with random distribution patterns<br>
+                &nbsp&nbsp&nbsp&nbsp- Built a sophisticated wind system affecting fire propagation patterns<br>
+                &nbsp&nbsp&nbsp&nbsp <br>
+                Key Features:<br>
+                &nbsp&nbsp&nbsp&nbsp- Terrain Types: Grass, forest, water, and urban areas<br>
+                &nbsp&nbsp&nbsp&nbsp- Environmental Controls: Wind speed, direction, and fire ignition points<br>
+                &nbsp&nbsp&nbsp&nbsp- Real-time Simulation and parameter adjustment<br>
+                &nbsp&nbsp&nbsp&nbsp <br>
+                Results:<br>
+                Successfully created a comprehensive fire spread simulation tool that allows users to:<br>
+                &nbsp&nbsp&nbsp&nbsp- Model various environmental scenarios<br>
+                &nbsp&nbsp&nbsp&nbsp- Study fire behavior under different conditions<br>
+                &nbsp&nbsp&nbsp&nbsp- Analyze the impact of terrain types and weather conditions<br>
+                &nbsp&nbsp&nbsp&nbsp- Visualize complex environmental interactions<br>
+            </li>
+            <li>
                 <strong onclick="openModal(['assets/rbt1.png'])">
                     Robot Stress Test 👁</strong> (CATIA)<br>
                 Conducted stress testing on robotic designs to evaluate performance under load to evaluate its capacity
                 to perform various tasks in different environments.
                 Used CATIA v5 to model the robot and simulate the stress test.
-            </li>
-            <li>
-                <strong onclick=" openModal(['assets/fdf.png','assets/fdf2.png'])">
-                    Fire Propagation Simulation 👁</strong> (Java)<br>
-                A simulation project demonstrating fire spread dynamics in a multiple virtual environment.
-                First, you create an environment with different materials and then you can start the simulation.
-                Changing the wind force, direction as the simulation progresses for a more realistic simulation.
             </li>
         </ul>
     </section>
