--- a/skills.html
+++ b/skills.html
@@ -91,7 +91,7 @@
             </li>
         </ul>
         <br>
-        <h2>Hard Skills</h2>
+        <h2>Technical Skills</h2>
         <br>
         <ul>
             <li><strong>Data Analysis and Interpretation:</strong> Ability to process and analyze complex datasets to
