--- a/projects.html
+++ b/projects.html
@@ -155,6 +155,7 @@
                 <strong onclick="openModal(['assets/ort.png','assets/ort2.png','assets/ort3.png',])">
                     Knee Orthosis Development 👁</strong> (Python, MATLAB)<br>
                 Knee Orthosis Development - Motion Analysis & Rehabilitation<br>
+                &nbsp&nbsp&nbsp&nbsp<br>
                 Developed an intelligent knee orthosis system for precise rehabilitation monitoring and analysis. This
                 project addressed the critical need for quantitative tracking of knee rehabilitation progress outside
                 clinical settings.<br>
